# paygate-mcp

./: .gitignore  README.md  pyproject.toml
src/paygate_mcp/: server.py
